# housing-map-project

./: .gitignore  DATA_MIGRATION_GUIDE.md  Home.py  Procfile  firestore_service.py  geocoding_cache.json  housing_listings_complete.csv  listing_scraper_api.py  pyproject.toml  test_url_generation.py  units.csv
.streamlit/: config.toml
pages/: 1_Upload_Data.py  2_Unit_Details.py  3_Geocoding_Failures.py  4_Favorites.py
